[package]
name = "flatpak_gtk_themer"
version = "0.1.1"
authors = ["luca"]
edition = "2018"
license = "GPL-3.0"
description = "a tool to apply gtk themes to flatpak applications for DE's that dont support themeing automatically"
readme = "README.md"
repository = "https://github.com/BrunoWallner/flatpak_gtk_themer"
keywords = ["flatpak", "gtk", "theme"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.21.0"
